# SignForge

./: .gitignore  README.md  TRIGGER_DEPLOYMENT.md  package.json  vercel.json
apps/web/: package.json
apps/web/src/app/: globals.css  layout.js  layout.jsx  layout.tsx  page.jsx  page.tsx
apps/web/src/app/customers/: page.js
apps/web/src/app/dashboard/: page.js
apps/web/src/app/design/: DesignStudioClient.js  DesignStudioClient.module.css  page.js
apps/web/src/app/design/templates/: page.js  templates.module.css
apps/web/src/app/production/virtual-cutter/: VirtualCutter.module.css  VirtualCutterClient.js  page.js
apps/web/src/app/quotes/: page.js
docs/: product-requirements.md  production-engine-roadmap.md
engine/: Cargo.toml  README.md
engine/src/: main.rs
