[package]
name = "signforge-engine"
version = "0.1.0"
edition = "2021"
description = "Linux and Raspberry Pi production engine for SignForge"
license = "MIT"

[[bin]]
name = "signforge-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
