[package]
name = "signforge-engine"
version = "0.2.0"
edition = "2021"
description = "Linux and Raspberry Pi production engine for SignForge"
license = "MIT"

[[bin]]
name = "signforge-engine"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
